--- a/src/css/theme-classic.css
+++ b/src/css/theme-classic.css
@@ -31,7 +31,7 @@
     --shadow-color: rgba(0, 0, 0, 0.1);
 
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* --- Layout --- */
