--- a/src/css/theme-classic.css
+++ b/src/css/theme-classic.css
@@ -304,7 +304,8 @@
 
 .theme-classic #result {
     justify-content: space-evenly;
-    font-size: 24px;
+    font-size: 32px;
+    font-weight: bold;
     color: var(--text-primary);
-    padding: 5px 15px;
+    padding: 10px 25px;
 }
